--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="80dp"
         android:text="Login to your account"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:fontFamily="@font/nunito_light"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,8 +102,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
-        android:alpha="0"
-        tools:alpha="100"
         >
 
         <com.google.android.material.textview.MaterialTextView
@@ -111,7 +109,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="13sp"
+            android:textStyle="bold"
             android:fontFamily="@font/nunito_light"
             android:text="Don’t have an account?"
             />
@@ -123,10 +122,11 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_login_to_register"
             android:layout_width="wrap_content"
-            android:textSize="12sp"
+            android:textSize="13sp"
             android:fontFamily="@font/nunito_light"
             android:layout_height="wrap_content"
             android:text="Sign Up"
+            android:textStyle="bold"
             android:textColor="?attr/colorPrimary"
             />
     </LinearLayout>
