--- a/app/src/main/res/layout/activity_choose_register.xml
+++ b/app/src/main/res/layout/activity_choose_register.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_back">
@@ -39,12 +40,13 @@
 
         <LinearLayout
             android:id="@+id/item1"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_choose_register"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:paddingVertical="18dp"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +56,6 @@
                 android:id="@+id/tv_buyer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:fontFamily="@font/nunito_light"
                 android:text="Buyer"
                 android:textColor="@color/black"
@@ -64,13 +65,14 @@
 
         <LinearLayout
             android:id="@+id/item2"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_choose_register"
             android:orientation="vertical"
             android:paddingHorizontal="20dp"
             android:layout_marginTop="20dp"
-            android:paddingVertical="15dp"
+            android:paddingVertical="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item1">
@@ -79,7 +81,6 @@
                 android:id="@+id/tv_seller"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:fontFamily="@font/nunito_light"
                 android:text="Seller"
                 android:textColor="@color/black"
@@ -90,16 +91,34 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Next"
         app:cornerRadius="8dp"
         android:layout_marginTop="30dp"
-        android:padding="18dp"
+        android:padding="16dp"
+        android:visibility="gone"
         android:textSize="16sp"
         android:textColor="@color/black"
         android:backgroundTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_disabled"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        app:cornerRadius="8dp"
+        android:layout_marginTop="30dp"
+        android:padding="16dp"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:enabled="false"
+        android:backgroundTint="#DED8E1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
