--- a/app/src/main/res/layout/alert_dialog_register_success.xml
+++ b/app/src/main/res/layout/alert_dialog_register_success.xml
@@ -11,8 +11,7 @@
         android:orientation="vertical"
         android:background="@drawable/bg_round_success"
         android:layout_marginHorizontal="20dp"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,16 +20,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/tv_success"
                 android:layout_width="wrap_content"
-                android:text="Link verifikasi telah berhasil dikirim ke email "
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:fontFamily="@font/nunito"
+                android:textColor="@color/black"
+                android:text="Link verifikasi telah berhasil dikirim ke email "
                 android:textAlignment="center"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_description"
@@ -39,6 +41,8 @@
                 android:textAlignment="center"
                 android:text="rasasayang@gmail.com"
                 android:textSize="18sp"
+                android:fontFamily="@font/nunito"
+                android:textColor="@color/black"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
@@ -52,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:text="Login"
                 app:cornerRadius="12dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:padding="18dp"
                 android:textSize="18sp"
                 android:textColor="@color/white"
@@ -62,14 +66,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_description"
                 />
 
-            <View
-                android:layout_width="5dp"
-                android:layout_height="2dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_login"
-                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
