--- a/app/src/main/res/layout/activity_register_pedagang.xml
+++ b/app/src/main/res/layout/activity_register_pedagang.xml
@@ -59,7 +59,30 @@
                 app:fontFamily="@font/nunito_light"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+            <ImageView
+                android:id="@+id/previewImageView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle"
+                app:srcCompat="@drawable/ic_place_holder" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_choose"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="Choose Picture"
+                app:cornerRadius="8dp"
+                android:layout_marginTop="5dp"
+                android:padding="1dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:backgroundTint="#DADADA"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/previewImageView"
+                />
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/fullnameEditTextLayout"
                 android:layout_width="match_parent"
@@ -69,7 +92,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvTitle"
+                app:layout_constraintTop_toBottomOf="@id/btn_choose"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
