--- a/app/src/main/res/layout/activity_register_merchant_acitivty.xml
+++ b/app/src/main/res/layout/activity_register_merchant_acitivty.xml
@@ -64,7 +64,7 @@
                 android:id="@+id/fullnameEditTextLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nama Pemilik"
+                android:hint="Username"
                 android:layout_marginTop="20dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:layout_constraintStart_toStartOf="parent"
